src/objects/CSM_QI_CAPA__c.object
<CustomObject>
    <fields>
        <fullName>Corrective_Action__c</fullName>
        <label>Corrective Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Type_Area__c</fullName>
        <label>Query Type/Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Code_Option__c</fullName>
        <description>Used to store resolution code values</description>
        <label>Resolution Code Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USER EDUCATION</fullName>
                </value>
                <value>
                    <fullName>CLIENT - ACCESS PROVIDED</fullName>
                </value>
                <value>
                    <fullName>COMPLETED</fullName>
                </value>
                <value>
                    <fullName>CORRECTED</fullName>
                </value>
                <value>
                    <fullName>NO ACTION TAKEN</fullName>
                </value>
                <value>
                    <fullName>NO ERROR FOUND</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>NO RESPONSE FROM CLIENT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Root_Cause_Option__c</fullName>
        <label>Root Cause Option</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resolution_Code_Option__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activation link caught in spam folder</fullName>
                </value>
                <value>
                    <fullName>Content not included in subscription</fullName>
                </value>
                <value>
                    <fullName>Editor entered the wrong metadata value</fullName>
                </value>
                <value>
                    <fullName>Improper activation</fullName>
                </value>
                <value>
                    <fullName>Insufficient Training</fullName>
                </value>
                <value>
                    <fullName>IP addresses changed</fullName>
                </value>
                <value>
                    <fullName>Lack of product understanding</fullName>
                </value>
                <value>
                    <fullName>Link containing errors</fullName>
                </value>
                <value>
                    <fullName>Link outdated</fullName>
                </value>
                <value>
                    <fullName>Missing Link</fullName>
                </value>
                <value>
                    <fullName>N/A - Defined Process followed</fullName>
                </value>
                <value>
                    <fullName>New user</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Primary contact changed</fullName>
                </value>
                <value>
                    <fullName>Profile for trial access not deleted</fullName>
                </value>
                <value>
                    <fullName>Regulation was not hyperlinked</fullName>
                </value>
                <value>
                    <fullName>Robot stopped working</fullName>
                </value>
                <value>
                    <fullName>Server down</fullName>
                </value>
                <value>
                    <fullName>Updates were not performed by Consultant</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Please Specify</fullName>
                </value>
                <value>
                    <fullName>Error in software</fullName>
                </value>
                <value>
                    <fullName>Human error</fullName>
                </value>
                <value>
                    <fullName>Information was unclear or wrong</fullName>
                </value>
                <value>
                    <fullName>Not in scope</fullName>
                </value>
                <value>
                    <fullName>Requested machine translation not available</fullName>
                </value>
                <value>
                    <fullName>Website watcher failure</fullName>
                </value>
                <value>
                    <fullName>Information was unclear</fullName>
                </value>
                <value>
                    <fullName>Not within current scope</fullName>
                </value>
                <value>
                    <fullName>Out of scope</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Type_3__c</fullName>
        <label>Sub-Type 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CSM DATA CAPA</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CSM QI CAPA Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSM_QI_CAPA</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>